# skyrim-community-shaders

./: .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.js  AI-INSTRUCTIONS.md  BuildDebug.bat  BuildDev.bat  BuildDevFast.bat  BuildPR.bat  BuildRelease.bat  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  Dockerfile  README.md  TRANSLATING.md  containerbuild.ps1  vcpkg.json
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/actions/prepare-shaders/: action.yml
.github/actions/setup-build-environment/: action.yaml
.github/configs/: README.md  generate-shader-configs.ps1
.github/workflows/: _shared-build.yaml  auto-rebase-prs.yaml  build.yaml  maint-cleanup-releases.yaml  maint-discord-notify.yaml  maint-todo-issues.yaml  nexus-upload.yaml  pr-checks.yaml  pr-i18n.yaml  pr-wip.yaml  release-build.yaml  release-hotfix.yaml  release-semantic.yaml  update-buffers-wiki.yaml  upload-nexus.yaml
cmake/: CleanupStaleEntries.cmake  FeatureVersions.h.in  FidelityFX-SDK.cmake  ThemePresets.h.in  XSEPlugin.cmake  cpp-mcp.cmake
cmake/ports/devbench-api/: README.md  devbench-api-config.cmake  portfile.cmake  vcpkg.json
docs/development/: README.md  shader-runtime-ab.md  shader-workflow.md  vscode-setup.md
docs/new-feature-template/: NewFeature.cpp  NewFeature.h  NewFeatureReadme.md
docs/weather-system-docs/: WeatherVariableRegistration.md
features/RenderDoc/: CORE
include/: DynamicWetness_PublicAPI.h  FrameAnnotations.h  PCH.h
package/Shaders/: BloodSplatter.hlsl  DeferredCompositeCS.hlsl  DistantTree.hlsl  Effect.hlsl  ISAlphaBlend.hlsl  ISApplyReflections.hlsl  ISApplyVolumetricLighting.hlsl  ISBasicCopy.hlsl  ISBlur.hlsl  ISCompositeLensFlareVolumetricLighting.hlsl  ISCopy.hlsl  ISDebugSnow.hlsl  ISDepthOfField.hlsl  ISDoubleVision.hlsl  ISDownsample.hlsl  ISExp.hlsl  ISFullScreenVR.hlsl  ISHDR.hlsl  ISIBLensFlare.hlsl  ISLightingComposite.hlsl  ISLocalMap.hlsl  ISMap.hlsl  ISNoise.hlsl  ISRadialBlur.hlsl  ISReflectionsRayTracing.hlsl  ISRefraction.hlsl  ISSAOBlur.hlsl  ISSAOCameraZ.hlsl  ISSAOComposite.hlsl  ISSAOMinify.hlsl  ISSILComposite.hlsl  ISSimpleColor.hlsl  ISSnowSSS.hlsl  ISTemporalAA.hlsl  ISUpsampleDynamicResolution.hlsl  ISVolumetricLighting.hlsl  ISVolumetricLightingGenerateCS.hlsl  ISWaterBlend.hlsl  ISWaterDisplacement.hlsl  ISWaterFlow.hlsl  (+8 more)
src/: Buffer.h  Deferred.cpp  Deferred.h  EngineFix.cpp  EngineFix.h  Feature.cpp  Feature.h  FeatureBuffer.cpp  FeatureBuffer.h  FeatureCategories.h  FeatureConstraints.cpp  FeatureConstraints.h  FeatureIssues.cpp  FeatureIssues.h  FrameAnnotations.cpp  GPUTimers.cpp  GPUTimers.h  Globals.cpp  Globals.h  Hooks.cpp  Hooks.h  Menu.cpp  Menu.h  Profiler.cpp  Profiler.h  SceneSettingsManager.cpp  SceneSettingsManager.h  SettingsOverrideManager.cpp  SettingsOverrideManager.h  ShaderCache.cpp  ShaderCache.h  ShaderCompileStatus.h  ShaderFileWatcher.h  State.cpp  State.h  TruePBR.cpp  TruePBR.h  WeatherManager.cpp  WeatherManager.h  WeatherVariableRegistry.h  (+1 more)
src/CSEditor/: EditorWindow.cpp  EditorWindow.h  InteriorOnlyPanel.cpp  InteriorOnlyPanel.h  LightEditor.cpp  LightEditor.h  LightPicker.cpp  LightPicker.h  PaletteWindow.cpp  PaletteWindow.h  WeatherUtils.cpp  WeatherUtils.h  Widget.cpp  Widget.h
src/EngineFixes/: ShadowmapCascadeCullingFix.cpp  ShadowmapCascadeCullingFix.h  ShadowmapCascadeRasterizerFix.cpp  ShadowmapCascadeRasterizerFix.h
src/Features/: CSEditor.cpp  CSEditor.h  CloudShadows.cpp  CloudShadows.h  DynamicCubemaps.cpp  DynamicCubemaps.h  ENBPostProcessing.cpp  ENBPostProcessing.h  Effect11.cpp  Effect11.h  ExponentialHeightFog.cpp  ExponentialHeightFog.h  ExtendedMaterials.cpp  ExtendedMaterials.h  ExtendedTranslucency.cpp  ExtendedTranslucency.h  GrassCollision.cpp  GrassCollision.h  GrassLighting.cpp  GrassLighting.h  HDRDisplay.cpp  HDRDisplay.h  HairSpecular.cpp  HairSpecular.h  IBL.cpp  IBL.h  InteriorSun.cpp  InteriorSun.h  InverseSquareLighting.cpp  InverseSquareLighting.h  LODBlending.cpp  LODBlending.h  LightLimitFix.cpp  LightLimitFix.h  LinearLighting.cpp  LinearLighting.h  OverlayFeature.h  PerformanceOverlay.cpp  PerformanceOverlay.h  RemoteControl.cpp  (+43 more)
src/I18n/: I18n.cpp  I18n.h
src/Menu/: AdvancedSettingsRenderer.cpp  AdvancedSettingsRenderer.h  BackgroundBlur.cpp  BackgroundBlur.h  CursorLoader.cpp  CursorLoader.h  FeatureListRenderer.cpp  FeatureListRenderer.h  FontSelector.cpp  FontSelector.h  Fonts.cpp  Fonts.h  HomePageRenderer.cpp  HomePageRenderer.h  IconLoader.cpp  IconLoader.h  MenuHeaderRenderer.cpp  MenuHeaderRenderer.h  OverlayRenderer.cpp  OverlayRenderer.h  ProfilingRenderer.cpp  ProfilingRenderer.h  SettingsTabRenderer.cpp  SettingsTabRenderer.h  StatisticsRenderer.cpp  StatisticsRenderer.h  ThemeManager.cpp  ThemeManager.h
src/ShaderTools/: BSShader.h  BSShaderHooks.h  ShaderCompiler.h
src/TruePBR/: BSLightingShaderMaterialPBR.cpp  BSLightingShaderMaterialPBR.h  BSLightingShaderMaterialPBRLandscape.cpp  BSLightingShaderMaterialPBRLandscape.h
src/Utils/: ActorUtils.cpp  BootSnapshot.h  D3D.cpp  D3D.h  ExternalEmittance.cpp  ExternalEmittance.h  FileSystem.cpp  FileSystem.h  Form.cpp  Form.h  Format.cpp  Format.h  GPUTimers.cpp  GPUTimers.h  Game.cpp  Game.h  GameSetting.cpp  GameSetting.h  Input.h  LegitProfiler.h  Moon.h  RestartSettings.h  Serialize.h  SettingsPatches.cpp  SettingsPatches.h  ShaderPatches.cpp  ShaderPatches.h  SkyVisibility.h  SphericalHarmonics.cpp  SphericalHarmonics.h  Subrect.cpp  Subrect.h  UI.cpp  UI.h  VRUtils.cpp  VRUtils.h  WinApi.cpp  WinApi.h
src/WeatherEditor/: EditorWindow.cpp  EditorWindow.h  InteriorOnlyPanel.cpp  InteriorOnlyPanel.h  PaletteWindow.cpp  WeatherUtils.cpp  WeatherUtils.h  Widget.cpp  Widget.h
tests/shaders/: CMakeLists.txt  README.md  runtime_discovered_tests.cpp  runtime_test_discovery.h  test_common.h  test_helpers_unified.h
tools/: extract-i18n.py  feature_version_audit.py  install-worktree-alias.ps1  new-worktree.ps1  sort-i18n.py  taa-renderdoc-ab.py  verify-shader-refactor.ps1  verify-shader-refactor.sh
(+289 files in other folders)
